Lagt til tester for AmtArrangorClient, AmtDeltakerClient, AmtDistribu… (#612)
* Lagt til tester for AmtArrangorClient, AmtDeltakerClient, AmtDistribusjonClient og AmtPersonServiceClient

* Fjernet parameter med samme verdi for alle tester.

* Liten optimalisering av tester.

* Bruker nå mockk-jvm. Lagt til -XX:+EnableDynamicAgentLoading i jvmArgs.